--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@ package="com.aftac.plugs">
 <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 <uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 <uses-feature android:name="android.hardware.wifi.direct" android:required="true" />
 
@@ -45,6 +47,7 @@ package="com.aftac.plugs">
         android:exported="false"
         android:icon="@mipmap/plugs_icon"
         android:label="Queue" />
+    <service android:enabled="true" android:name=".MeshNetwork.FileTransferService" />
 
     <activity android:name=".TriggersActivity" />
     <activity android:name=".ActionsActivity" />
