--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:icon="@mipmap/plugs_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/Theme.Design.Light">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,12 +31,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".DebugActivities.DebugMenuActivity" />
-        <activity
-            android:name=".DebugActivities.MeshDebugActivity" />
+        <activity android:name=".DebugActivities.MeshDebugActivity" />
         <activity
             android:name=".DebugActivities.QueueDebugActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".ConfigurationActivity" />
         <activity android:name=".DeployActivity" />
 
         <service
@@ -46,10 +44,9 @@
             android:icon="@mipmap/plugs_icon"
             android:label="Queue" />
 
-        <activity android:name=".TriggersActivity" />
-        <activity android:name=".ActionsActivity" />
-        <activity android:name=".HomeStationActivity" />
-        <activity android:name=".GeneralActivity" />
+        <activity
+            android:name=".ConfigurationActivity"
+            android:label="@string/title_activity_configuration"></activity>
     </application>
 
 </manifest>
